@@ -27,7 +27,7 @@ then
 fi
 
 home=$PWD
-IP=10.0.0.1
+IP=10.14.4.1
 
 function run_mirror { 
     echo "apt-mirror /etc/apt/mirror.list" 
