@@ -62,9 +62,9 @@ sudo ifup br0
 sudo chsh maas -s /bin/bash
 [ -d /home/maas/.ssh ] || echo -e "\n\n\n" | sudo -u maas ssh-keygen -N "" -t rsa -f /home/maas/.ssh/id_rsa
 grep 'maas@' ~/.ssh/authorized_keys || sudo cat /home/maas/.ssh/id_rsa.pub | tee -a /home/ubuntu/.ssh/authorized_keys
-# 10.0.0.1 known hosts
+# 10.14.4.1 known hosts
 
-maas-cli login "admin" http://10.0.0.1/MAAS "$ADMIN_CLI"
+maas-cli login "admin" http://10.14.4.1/MAAS "$ADMIN_CLI"
 maas-cli admin zones create name="$NODE-vms"
 
 for i in {0..3}; do
